--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,4 @@
-/* header and nav */
-.header {
-    background-color: aqua;
-}
-/* 
-Colors for Project: 
+/* Colors for Project: 
 Emerald Green: Hex #466458
 Sage Green: HEX #91A78F
 Ballet Pink: HEX #FDEEE7
@@ -24,22 +19,97 @@ Hello Paris:
     url("https://db.onlinewebfonts.com/t/bea2de6d24c35d0894f1bd50c2f994f3.woff2")format("woff2"),
     url("https://db.onlinewebfonts.com/t/bea2de6d24c35d0894f1bd50c2f994f3.woff")format("woff"),
     url("https://db.onlinewebfonts.com/t/bea2de6d24c35d0894f1bd50c2f994f3.ttf")format("truetype"),
-    url("https://db.onlinewebfonts.com/t/bea2de6d24c35d0894f1bd50c2f994f3.svg#Hello Paris Script")format("svg");
+    url("https://db.onlinewebfonts.com/t/bea2de6d24c35d0894f1bd50c2f994f3.svg#Hello Paris Script")format("svg");}*/
+body {
+    background-color: #466458;
 }
-*/
-.logo {
-    background: ;
-    height: 100px;
-    background-image: url("");
-    background-repeat: no-repeat;
+    /* header and nav */
+.nav {
+        display: flex;
+        display: inline-block;
+        background-color: #91A78F;
+        vertical-align: top;
+    }
+ul {
+    list-style-type: none;
+    position: fixed;
+    top: 0;
+    margin: 0;
+    padding: 20px;
+    width: 95%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+  li a {
+    padding: 20px;
+    background-color: #91A78F;
+    text-decoration: none;
+    color: black;
+    font-family: Lato, Helvetica, sans-serif;
+    }
+    .logo img {
+        width: 10%;
+        height: auto;
+        background-color: #91A78F;
+    }
+    
+/* About Me */
+.aboutme1 {
+    display: flex;
 }
+.aboutme2 {
+    display: flex;
+}
+.aboutmeimage1 {
+    width: 30%;
+    height: auto;
+}
+.aboutmeimage2 {
+    width: 50%;
+    height: auto;
+}
+div h1 {
+        color: white;
+        font-family: Lato, Helvetica, sans-serif;
+    }
+div h2 {
+        color: white;
+        font-family: Lato, Helvetica, sans-serif;
+       }
+div h3 {
+        color: white;
+        font-family: Lato, Helvetica, sans-serif;
+        }
+div h4{
+        color: white;
+        font-family: Lato, Helvetica, sans-serif;
+        }
+div h5{
+        color: white;
+        font-family: Lato, Helvetica, sans-serif;
+        }
+
+/* My Work */
 .MyWork {
    
-}
+    }
 img {
     width: 100%;
     height: auto;
 }
 
+/* Skills */
+
+
+/* Footer */
+footer h2 {
+    color: white;
+    font-family: Lato, Helvetica, sans-serif;
+   }
+footer p {
+    color: white;
+    font-family: Lato, Helvetica, sans-serif;
+    }
 
 
